fix crash after resume

patch by Jiri Slaby, thanks!
(essentially adds a null pointer check)
BUG: 274221